[tool.poetry]
name = "art-letters"
version = "1.0.0"
description = "Create art from letters."
authors = ["killian31 <80256683+killian31@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.2"
plotly = "^6.0.0"
streamlit = "^1.42.0"
streamlit-plotly-events = "^0.0.6"
shapely = "^2.0.7"
watchdog = "^6.0.0"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
